--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,83 @@
 parser: "babel-eslint"
+
+parserOptions:
+    ecmaVersion: 6
+    sourceType: 'module'
+    ecmaFeatures:
+        experimentalObjectRestSpread: true
+        jsx: true
+
+plugins:
+    - react
+    - pug
 env:
-    es6: true
     browser: true
     node: true
+    es6: true
+    mocha: true
 rules:
+    
+    jsx-quotes: [2, "prefer-single"]
+    react/display-name: 0
+    react/forbid-prop-types: 0
+    react/no-danger: 0
+    react/no-deprecated: 2
+    react/no-did-mount-set-state: 1
+    react/no-did-update-set-state: 1
+    react/no-direct-mutation-state: 2
+    react/no-is-mounted: 2
+    react/no-multi-comp: 2
+    react/no-set-state: 0
+    react/no-string-refs: 0
+    react/no-unknown-property: 2
+    react/prefer-es6-class: 2
+    react/prefer-stateless-function: 2
+    react/prop-types: 2
+    react/react-in-jsx-scope: 2
+    react/require-extension: 0
+    react/self-closing-comp: 2
+    react/sort-comp: [2, {
+        order: [
+            'static-methods',
+            'lifecycle',
+            'everything-else',
+            'render'
+        ]
+    }]
+    react/sort-prop-types: 2
+
+    react/jsx-indent-props: [2, "tab"]
+    react/jsx-boolean-value: [2, "never"]
+    react/jsx-closing-bracket-location: [2, "tag-aligned"]
+    react/jsx-curly-spacing: [2, "never"]
+    react/jsx-equals-spacing: [2, "never"]
+    react/jsx-handler-names: [2, {
+        "eventHandlerPrefix": "handle",
+        "eventHandlerPropPrefix": "on"
+    }]
+    react/jsx-indent: [2, "tab"]
+    react/jsx-key: 2
+    react/jsx-max-props-per-line: [2, {maximum: 2}]
+    react/jsx-no-bind: 2
+    react/jsx-no-duplicate-props: 2
+    react/jsx-no-literals: 0
+    react/jsx-no-undef: 2
+    react/jsx-pascal-case: 2
+    react/jsx-sort-props: 2
+    react/jsx-tag-spacing: ["error", {beforeSelfClosing: "always" }]
+    react/jsx-uses-react: 2
+    react/jsx-uses-vars: 2
+    react/jsx-wrap-multilines: 2
+
+
+
     arrow-parens: [1, 'as-needed']
     arrow-spacing: [1, {before: true, after: true}]
     accessor-pairs: 2
     block-scoped-var: 2
     brace-style: [0, '1tbs']
     camelcase: 1
-    comma-dangle: [2, 'never']
+    comma-dangle: [2, 'always-multiline']
     comma-spacing: [2, {before: false, after: true}]
     comma-style: [2, 'last']
     complexity: [1, 11]
