--- a/package.json
+++ b/package.json
@@ -121,6 +121,17 @@
     "svg4everybody": "^2.0.0",
     "webpack": "^1.12.9",
     "webpack-stats-logger": "^1.0.1",
-    "webpack-stream": "^3.1.0"
+    "webpack-stream": "^3.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-popup": "^0.6.0",
+    "react-router": "^3.0.0"
+  },
+  "dependencies": {
+    "babel-preset-react": "^6.24.1",
+    "eslint-plugin-pug": "^1.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "prop-types": "^15.6.2",
+    "recompose": "^0.27.1"
   }
 }
