--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "prop-types": "^15.6.2",
     "react-redux": "^5.0.7",
     "recompose": "^0.27.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "remodal": "^1.1.1"
   }
 }
