--- a/package.json
+++ b/package.json
@@ -106,6 +106,10 @@
     "npm-install-webpack-plugin": "^2.0.2",
     "npm-run-all": "^1.8.0",
     "pug-lint": "^2.2.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-popup": "^0.6.0",
+    "react-router": "^3.2.1",
     "require-dir": "^0.3.2",
     "rimraf": "^2.5.0",
     "run-sequence": "^1.2.2",
@@ -121,11 +125,7 @@
     "svg4everybody": "^2.0.0",
     "webpack": "^1.12.9",
     "webpack-stats-logger": "^1.0.1",
-    "webpack-stream": "^3.1.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-popup": "^0.6.0",
-    "react-router": "^3.0.0"
+    "webpack-stream": "^3.1.0"
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
@@ -133,8 +133,11 @@
     "eslint-plugin-react": "^7.10.0",
     "prop-types": "^15.6.2",
     "react-redux": "^5.0.7",
+    "react-router-redux": "^4.0.8",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0",
     "remodal": "^1.1.1"
   }
 }
